--- a/careers.html
+++ b/careers.html
@@ -459,7 +459,7 @@
             </div>
 
             <!-- Job Items -->
-            <a href="job-detail.html" target="_blank"
+            <a href="junior-architect-1-3-years.html" target="_blank"
                     ><div class="job-item">
               <div class="job-summary">
                 <!-- <span class="toggle-icon">+</span> -->
@@ -517,7 +517,7 @@
             </div></a
                   >
 
-           <a href="job-detail.html" target="_blank"
+           <a href="senior-architect-5-years.html" target="_blank"
                     > <div class="job-item">
               <div class="job-summary">
                 
@@ -536,7 +536,7 @@
               </div> -->
             </div></a>
 
-            <a href="job-detail.html" target="_blank"
+            <a href="2d-draftsman.html" target="_blank"
                     ><div class="job-item">
               <div class="job-summary">
                 <!-- <span class="toggle-icon">+</span> -->
