--- a/senior-architect-5-years.html
+++ b/senior-architect-5-years.html
@@ -220,7 +220,7 @@
       <!-- Hero Section-->
       <div class="contectSection">
         <div class="mainContent">
-          <h1>Junior Architect (1-3 Years of Experience)</h1>
+          <h1>Senior Architects (5+ Years of Experience)</h1>
           <section>
             <p>
               EyeCatch Architects is a dynamic collective of 50+ architects,
@@ -259,17 +259,34 @@
           <section>
             <h3>Join Us on Our Mission</h3>
             <p>
-              If you are a Junior Architect, we’re looking for someone who has:
+              If you are a Senior Architect, we’re looking for someone who has:
             </p>
             <ul>
               <li>
-                Completed an accredited bachelor's or master's degree in
-                architecture or design.
+                Leadership and mentoring abilities to inspire and guide team
+                members.
               </li>
               <li>
-                1+ years of postgraduate experience in architecture or a related
-                field.
+                Clear and persuasive communication skills with clients and
+                teams.
               </li>
+              <li>
+                Technical expertise in design tools, building codes, and
+                construction methods.
+              </li>
+              <li>
+                Problem-solving skills with quick decision-making and
+                adaptability in complex situations.
+              </li>
+              <li>
+                Project management skills with strong organization and time
+                management.
+              </li>
+              <li>
+                Completion of an accredited bachelor's or master's degree in
+                architecture or design.
+              </li>
+              <li>5+ years of experience in architecture or design.</li>
               <li>Willingness to relocate to Hyderabad or Vijayawada.</li>
               <li>
                 Proficiency in AutoCAD, SketchUp, V-Ray, Enscape, and Adobe
@@ -351,7 +368,7 @@
         </div>
         <!-- mainContent -->
         <div class="sidebar">
-          <div class="sideSection">
+          <!-- <div class="sideSection">
             <h3>Share:</h3>
             <div class="shareIcons">
               <span><img src="/images/facebook.svg" /></span>
@@ -359,7 +376,7 @@
               <span><img src="/images/instagram.svg" /></span>
               <span><img src="/images/linkedin.svg" /></span>
             </div>
-          </div>
+          </div> -->
 
           <div class="sideSection">
             <h3>Job Area:</h3>
@@ -412,12 +429,16 @@
               perspectives to every project.
             </p>
             <p>
-              Read more about us on <a href="#" target="_blank">EyeCatch</a>
+              Read more about us on
+              <a href="index.html" target="_blank">EyeCatch Aechitects</a>
             </p>
+            <p>Send your resume/portfolio.</p>
           </div>
 
           <div class="sideSection">
-            <a href="#" class="sendBtn" style=""> Send Application </a>
+            <a href="mailto:hr@eyecatcharchitects.com" class="sendBtn" style="">
+              Send Application
+            </a>
           </div>
         </div>
         <!-- sidebar -->
@@ -521,6 +542,10 @@
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper(".mySwiper", {
+        autoplay: {
+          delay: 2000,
+          disableOnInteraction: false,
+        },
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
