--- a/architecture.html
+++ b/architecture.html
@@ -704,13 +704,13 @@
                         <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
-                              <div class="swiper-slide">
+                              <!-- <div class="swiper-slide">
                                 <img
                                   class="ss-carousel__item__image"
                                   src="/projects/meditation/7-1.jpg"
                                   alt=""
                                 />
-                              </div>
+                              </div> -->
                               <div class="swiper-slide">
                                 <img
                                   class="ss-carousel__item__image"
@@ -747,7 +747,7 @@
                         <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
-                            src="/projects/meditation/8.jpg"
+                            src="/projects/meditation/7-1.jpg"
                             alt=""
                           />
                         </li>
