--- a/index.html
+++ b/index.html
@@ -1665,14 +1665,14 @@
               <div class="sectionHead parallax-section">
                 <h2>Press & Articles</h2>
               </div>
-              <div class="row borderBottom">
+              <div class="rowG50 borderBottom">
                 <div class="col4">
                   <div class="newsCard">
                     <div class="newsThumb">
                       <a
                         href="https://www.youtube.com/watch?v=VwTmeN1omTA&pp=ygUIZXllY2F0Y2g%3D"
                         class="glightbox3"
-                        ><img src="images/8.jpg"
+                        ><img src="https://placehold.co/600x350"
                       /></a>
                     </div>
                     <div class="newsTitle">
@@ -1694,7 +1694,29 @@
                       <a
                         href="https://www.youtube.com/watch?v=VwTmeN1omTA&pp=ygUIZXllY2F0Y2g%3D"
                         class="glightbox3"
-                        ><img src="images/6.jpg"
+                        ><img src="https://placehold.co/600x350"
+                      /></a>
+                    </div>
+                    <div class="newsTitle">
+                      <h3>
+                        <a
+                          href="https://www.youtube.com/watch?v=VwTmeN1omTA&ab_channel=EyeCatchAdvertising"
+                          class="glightbox3"
+                          >EyeCatch Interiors | Our Client | Bhama Emporio |
+                          Vijayawada |
+                        </a>
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+                <!-- Col -->
+                <div class="col4">
+                  <div class="newsCard">
+                    <div class="newsThumb">
+                      <a
+                        href="https://www.youtube.com/watch?v=VwTmeN1omTA&pp=ygUIZXllY2F0Y2g%3D"
+                        class="glightbox3"
+                        ><img src="https://placehold.co/600x350"
                       /></a>
                     </div>
                     <div class="newsTitle">
