--- a/architecture.html
+++ b/architecture.html
@@ -1240,7 +1240,28 @@
                             alt=""
                           />
                         </li>
-                        <li class="ss-carousel__item imgBlock">
+                        <li class="ss-carousel__item slideBlock">
+                          <div class="swiper mySwiper">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                <img
+                                  class="ss-carousel__item__image"
+                                  src="/projects/shell/5.jpg"
+                                  alt=""
+                                />
+                              </div>
+                              <div class="swiper-slide">
+                                <img
+                                  class="ss-carousel__item__image"
+                                  src="/projects/shell/6.jpg"
+                                  alt=""
+                                />
+                              </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                          </div>
+                        </li>
+                        <!-- <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
                             src="/projects/shell/5.jpg"
@@ -1253,7 +1274,7 @@
                             src="/projects/shell/6.jpg"
                             alt=""
                           />
-                        </li>
+                        </li> -->
 
                         <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
@@ -1800,6 +1821,8 @@
         max-width: 65%;
         margin-left: auto;
         margin-right: auto;
+        font-size: 14px;
+        line-height: 1.6;
       }
       .ss-carousel .ss-carousel__item.videoBlock video {
         width: 100%;
