--- a/projects.html
+++ b/projects.html
@@ -531,7 +531,7 @@
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Smart Furniture</h3>
-                      <p class="location">Vijayawada</p>
+                      <p class="location">Vijayawada, <br />Andhra Pradesh</p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -563,7 +563,9 @@
                               </div>
                               <div class="projectTitleInfo">
                                 <h3 class="projectTitle">Smart Furniture</h3>
-                                <p class="location">Vijayawada</p>
+                                <p class="location">
+                                  Vijayawada, <br />Andhra Pradesh
+                                </p>
                                 <p class="location">2025</p>
                               </div>
                             </div>
@@ -652,9 +654,9 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              The small shop space led to an innovative solution
-                              to the design to prevent monotony and provide a
-                              rich and visually stimulating interior. The design
+                              The shop space led to an innovative solution to
+                              the design to prevent monotony and provide a rich
+                              and visually stimulating interior. The design
                               provides maximum main road visibility despite a
                               secondary road entrance
                             </p>
@@ -826,9 +828,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -842,9 +845,9 @@
 
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -1192,9 +1195,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -1208,9 +1212,9 @@
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -1496,9 +1500,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -1512,9 +1517,9 @@
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -1555,7 +1560,9 @@
                       <h3 class="projectTitle">
                         Padmam - Silver Jewellery Store
                       </h3>
-                      <p class="location">Gachibowli, Hyderabad</p>
+                      <p class="location">
+                        CMR CENTRal, Eluru<br />Andhra Pradesh
+                      </p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -1589,7 +1596,9 @@
                                 <h3 class="projectTitle">
                                   Padmam - Silver Jewellery Store
                                 </h3>
-                                <p class="location">CMR Central @ Eluru</p>
+                                <p class="location">
+                                  CMR CENTRal, Eluru<br />Andhra Pradesh
+                                </p>
                                 <p class="location">2024</p>
                               </div>
                             </div>
@@ -1793,9 +1802,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -1809,9 +1819,9 @@
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -1846,7 +1856,9 @@
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Ladia - Lab Grown Diamonds</h3>
-                      <p class="location">JUBILEE HILLS, PUNJAGUTTA</p>
+                      <p class="location">
+                        JUBILEE HILLS, PUNJAGUTTA<br />Hyderabad, Telangana
+                      </p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -1879,7 +1891,8 @@
                                   Ladia - Lab Grown Diamonds
                                 </h3>
                                 <p class="location">
-                                  JUBILEE HILLS, PUNJAGUTTA
+                                  JUBILEE HILLS, PUNJAGUTTA<br />Hyderabad,
+                                  Telangana
                                 </p>
                                 <p class="location">2024</p>
                               </div>
@@ -2222,9 +2235,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -2237,9 +2251,9 @@
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -2273,7 +2287,7 @@
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Kanchipuram perumal silks</h3>
-                      <p class="location">Nellore</p>
+                      <p class="location">Nellore, Andhra Pradesh</p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -2307,7 +2321,7 @@
                                 <h3 class="projectTitle">
                                   Kanchipuram perumal silks
                                 </h3>
-                                <p class="location">Nellore</p>
+                                <p class="location">Nellore, Andhra Pradesh</p>
                                 <p class="location">2023</p>
                               </div>
                             </div>
@@ -2517,7 +2531,7 @@
                         </li>
 
                         <li class="ss-carousel__item videoBlock">
-                          <video muted autoplay loop>
+                          <video muted autoplay loop preload="none">
                             <source
                               src="/projects/kps/Kps-Full Video1.mp4"
                               type="video/mp4"
@@ -2526,6 +2540,9 @@
 
                             Your browser does not support the video tag.
                           </video>
+                          <button class="mute-toggle">
+                            <i class="fas fa-volume-mute"></i>
+                          </button>
                         </li>
 
                         <li class="ss-carousel__item slideBlock">
@@ -2592,9 +2609,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -2607,9 +2625,9 @@
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -2643,9 +2661,7 @@
                       <img src="/projects/amyra/Amyra_icon.png" />
                     </div>
                     <div class="projectTitleInfo">
-                      <h3 class="projectTitle">
-                        Amyra Silver - Jewellery store
-                      </h3>
+                      <h3 class="projectTitle">Amyra Silver Jewellery store</h3>
                       <p class="location">Vijayawada, Andhra Pradesh</p>
                     </div>
                   </div>
@@ -2676,7 +2692,7 @@
                               </div>
                               <div class="projectTitleInfo">
                                 <h3 class="projectTitle">
-                                  Amyra Silver - Jewellery store
+                                  Amyra Silver Jewellery store
                                 </h3>
                                 <p class="location">
                                   Vijayawada, Andhra Pradesh
@@ -2763,7 +2779,7 @@
                           <!-- <h3></h3> -->
 
                           <p>
-                            The Facade layered semicircular forms create depth,
+                            The facade layered semicircular forms create depth,
                             movement, and a dynamic appearance. Subtle shadows
                             and dimensionality give the structure a sense of
                             motion, softening its modern aesthetic with gentle,
@@ -2786,7 +2802,7 @@
                         <li class="ss-carousel__item textBlock">
                           <!-- <h3>Site</h3> -->
                           <p>
-                            The site Situated on a corner with dual exposure and
+                            The site situated on a corner with dual exposure and
                             flyover visibility, The design balances aesthetics
                             with functionality, keeping customer flow around a
                             circular display and strategically placing key areas
@@ -3004,9 +3020,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -3020,9 +3037,9 @@
                               <p>Pavan P NSK</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -3326,9 +3343,10 @@
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
-                              <p>Madhu sudhan rao Pulipati</p>
+                              <p>Madhusudhan Rao Pulipati</p>
                               <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <h5 class="subHead2">Principle Designer</h5>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
@@ -3342,9 +3360,9 @@
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
-                              <p>Rajib roy</p>
+                              <p>Rajib Roy</p>
 
-                              <p>Shamsheer p</p>
+                              <p>Shamsheer P</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
                             </div>
@@ -3845,6 +3863,8 @@
         max-width: 65%;
         margin-left: auto;
         margin-right: auto;
+        font-size: 14px;
+        line-height: 1.6;
       }
       .ss-carousel .ss-carousel__item.videoBlock video {
         width: 100%;
