--- a/careers.html
+++ b/careers.html
@@ -522,7 +522,7 @@
               <div class="job-summary">
                 
                 <span class="job-title"
-                  >Senior Architects (5+ Years of Experience)</span
+                  >Senior Architect (5+ Years of Experience)</span
                 >
                 <span class="job-area">Architecture</span>
                 <span class="job-location">Hyderabad</span>
