--- a/index.html
+++ b/index.html
@@ -1670,18 +1670,18 @@
                   <div class="newsCard">
                     <div class="newsThumb">
                       <a
-                        href="https://www.youtube.com/watch?v=VwTmeN1omTA&pp=ygUIZXllY2F0Y2g%3D"
+                        href="https://www.youtube.com/watch?v=-vtgFEjLh4o&ab_channel=ETVAndhraPradesh"
                         class="glightbox3"
-                        ><img src="https://placehold.co/600x350"
+                        ><img src="news/Etv.jpg"
                       /></a>
                     </div>
                     <div class="newsTitle">
                       <h3>
                         <a
-                          href="https://www.youtube.com/watch?v=VwTmeN1omTA&ab_channel=EyeCatchAdvertising"
+                          href="https://www.youtube.com/watch?v=-vtgFEjLh4o&ab_channel=ETVAndhraPradesh"
                           class="glightbox3"
-                          >EyeCatch Interiors | Our Client | Bhama Emporio |
-                          Vijayawada |
+                          >Pranay Mithilesh of Vijayawada | Young Interior
+                          Designer | Shows Off His Massive Talent || Yuva
                         </a>
                       </h3>
                     </div>
