--- a/junior-architect-1-3-years.html
+++ b/junior-architect-1-3-years.html
@@ -118,6 +118,7 @@
       .sideSection p {
         padding-top: 0;
         margin-top: 0;
+        text-align: justify;
       }
       .sideSection p a {
         text-decoration: none;
@@ -324,7 +325,7 @@
           </section>
 
           <section>
-            <h3>At EyeCatch Architects, We Value:</h3>
+            <h3>At EyeCatch Architects, we value:</h3>
             <ul>
               <li>
                 <strong>Proactive Mindset</strong> – Take initiative, explore
@@ -412,30 +413,28 @@
           <div class="sideSection">
             <h3>Join EyeCatch</h3>
             <p>
-              EyeCatch Architects is a dynamic collective of 50+ architects,
-              engineers, inventors, designers, researchers, video editors, and
-              consultants from Andhra Pradesh, Telangana, and Karnataka, all
-              working together from our corporate office in Hyderabad,
-              Telangana.
+              EyeCatch Architects is a distinguished firm in South India,
+              renowned for its excellence and numerous accolades. Among its
+              notable recognitions is the FOAID - Festival of Architecture and
+              Interior Designing 2025, where it earned honors in two
+              categories—Conceptual Architecture and Finalist - Ongoing Interior
+              Design. Additionally, the firm has been recognized as the Trusted
+              and Promising Architecture & Interior Design Firm of the Year
+              2025, Telangana, and has received the Golden Door Award for
+              Excellence in Consultancy within the Architecture & Interior
+              Design Domain.
             </p>
             <p>
-              Our portfolio spans innovative architecture, immersive design, and
-              groundbreaking research, shaping environments that inspire and
-              endure. From transforming urban landscapes to redefining interior
-              experiences, our projects merge creativity with technical
-              precision, ensuring lasting impact.
-            </p>
-            <p>
-              At EyeCatch, we believe in visual storytelling, crafting spaces
-              that captivate and engage. Our multidisciplinary team thrives on
-              collaboration, experimentation, and innovation, bringing fresh
-              perspectives to every project.
+              Since 1995, EyeCatch Architects has believed in the power of
+              visual storytelling—creating experiences that captivate audiences
+              and leave a lasting impact. Our philosophy is rooted in
+              innovation, creativity, and attention to detail, ensuring that
+              every project we undertake exceeds expectations.
             </p>
             <p>
               Read more about us on
               <a href="index.html" target="_blank">EyeCatch Aechitects</a>
             </p>
-            <p>Send your resume/portfolio.</p>
           </div>
 
           <div class="sideSection">
