--- a/projects.html
+++ b/projects.html
@@ -861,7 +861,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -1229,7 +1229,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -1534,7 +1534,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -1836,7 +1836,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -2267,7 +2267,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -2641,7 +2641,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -3053,7 +3053,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth.C</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
@@ -3377,7 +3377,7 @@
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
-                              <p>Ananth</p>
+                              <p>Anantu Chinthalapalli</p>
                               <h5 class="subHead2">Relationship Manager</h5>
                               <p>Tharani M</p>
                             </div>
